2007-11-25  Romain Francoise  <romain@orebokech.com>

	* gnus-msg.el (gnus-summary-reply): Delete extra paren.

2007-11-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* tls.el (tls-program): Provide more custom choices from
	`tls-checktrust'.  Refer to `tls-checktrust' in doc string.
	(tls-process-connection-type, tls-success): Remove "*" in doc string.

2007-11-24  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnmail.el (nnmail-spool-file): Remove obsolete variable.
	(nnmail-get-new-mail): Remove code using `nnmail-spool-file'.

	* gnus-start.el (defvar, gnus-get-unread-articles): Remove code using
	`nnmail-spool-file'.

	* nnkiboze.el (nnkiboze-generate-groups): Don't bind obsolete
	`nnmail-spool-file'.

	* gnus-move.el (gnus-change-server): Ditto.

	* gnus-kill.el (gnus-batch-score): Ditto.

	* gnus-cache.el (gnus-jog-cache): Ditto.

	* gnus-msg.el (gnus-summary-reply): Ignore
	gnus-confirm-mail-reply-to-news for wide and very wide replies.

2007-11-24  Elias Oltmanns  <eo@nebensachen.de>

	* gnus.el (gnus-method-to-server): Add an optional parameter so the
	caller can indicate whether the cache should be disregarded for this
	call.  This way the result of the call is reproducible at all times and
	can be considered a canonical server name for the supplied method.
	(gnus-agent-method-p): Canonicalize server names by pushing their
	method through `gnus-method-to-server' using the no-cache argument.

	* gnus-srvr.el (gnus-server-insert-server-line): Call
	`gnus-method-to-server' with `no-cache' argument.

	* gnus-agent.el (gnus-agent-toggle-plugged): Don't call
	gnus-agent-possibly-synchronize-flags as this should be called when the
	server is actually being opened.
	(gnus-agent-possibly-synchronize-flags)
	(gnus-agent-possibly-synchronize-flags-server): Move check for the
	flags file of an agentized server to the latter function.

	* gnus-int.el (gnus-agent-possibly-synchronize-flags-server): Autoload.
	(gnus-open-server): Call gnus-agent-possibly-synchronize-flags-server